OFAST-188 fix anchor link behind navbar

--- a/src/pages/LessonPage.css
+++ b/src/pages/LessonPage.css
@@ -1,5 +1,6 @@
 html {
   scroll-snap-type: y mandatory;
+  scroll-padding-top: 80px;
 }
 
 .fadeColor {
